--- a/ders/index.html
+++ b/ders/index.html
@@ -39,6 +39,7 @@
   <li><a href="../KK/korunmus.html" target=KK>Korunmuş 2022 (V4.4)</a>
   <li><a href="benzer.html">Benzerlik öbekleri 2024</a>
   <li><a href="../simi/2025.html" target=KK>Kıraat farkları 2025</a>
+  <li><a href="../simi/tablo.html">Benzerlik YENİ (V4.9)</a>
 </ul>
 </div>
 <div class=narrow>
