--- a/simi/2025.html
+++ b/simi/2025.html
@@ -221,6 +221,8 @@ gibi <b>husnen</b> (güzellik) okunabiliyor. Benzer ayetlerde kıraat farkı ola
 Daha çok sayıda örnek için: <a href="./tablo.html">tablo</a>
 </p>
 
-<script>window.name = 'KK'</script>
+<script>
+window.name = parent === self? 'KK' : 'finder'
+</script>
   </body>
 </html>
