--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <li>2023 <a href="./esma/Husna.html">Esmâ levhaları</a>
   <li>2024 <a href="./rama/1445.html">Ramazan Meyveleri</a>
   <li>2024 <a href="./ders/kadime.html">Mesâhif-i Kadîme</a>
-  <li>2025 <a href="./simi/2025.html" target=KK>Benzerlik ve Kıraat</a>
+  <li>2025 <a href="./simi/">Benzerlik örnekleri</a>
 </ul>
 </div>
 <div class=gap> </div>
