--- a/simi/index.html
+++ b/simi/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
 <meta charset="UTF-8">
 <meta name="viewport"    content="width=device-width">
-<meta name="author"      content="M A Eyler, Istanbul, 2021" />
-<meta name="description" content="Friday lectures" />
+<meta name="author"      content="M A Eyler, Istanbul, 2025" />
+<meta name="description" content="Similarty in the Quran" />
 <link rel="stylesheet" href="/Kitap/cuma/cuma.css" media="all">
 <link rel="icon" href="/Kuran/image/icon.png">
-<title>Cuma Dersleri</title>
+<title>Benzeşen Ayetler</title>
 
 <style>
   h2 { margin-bottom: -10px; margin-top: 10px; }
