--- a/simi/tablo.html
+++ b/simi/tablo.html
@@ -11,7 +11,8 @@
     <title>Benzerlik örnekleri</title>
   </head>
   <style>
-	#samples p {
+	#samples > p {
+		break-before: page;
 		margin-top: 2em;
 	}
 	#samples span {
@@ -24,6 +25,7 @@
 		color: darkgreen;
 	}
 	details {
+		break-after: page;
 		margin-top: 0.6em;
 		margin-bottom: 0.6em;
 		margin-left: 1em;
@@ -33,6 +35,7 @@
 	}
 	a:hover { font-weight: normal; }
 @media screen and (max-width: 500px) {
+	.small { font-size: small; }
 	img { margin-left: -1em; }
 }
   </style>
@@ -43,11 +46,12 @@
 <a href="https://groups.google.com/g/okuyun5/search?q=before%3A2025-04-1" target=Kuran>Iqra -- Okuyun</a> mail grubunda günlük olarak yayınlanmıştı. 
 İlk 10 örnek <a href="./2025.html">şu sayfada</a> video yardımıyla daha ayrıntılı anlatılıyor. Bu sayfadan önce oraya bakmanız tavsiye edilir.</i>
 </p>
-<p>
+<p class="small">
 	Örnek sayısı: <span id=nsamp></span> &emsp; 
 	Ayet sayısı: <span id=nverse></span> &emsp;
 	<input type="checkbox" id="sort" name="sort" />
-    <label for="sort">Sıralı</label>
+    <label for="sort">Sıralı</label> &emsp;
+	<input type="button" id="cButton" value="Aç" />
 </p><br>
 
 <h2>Benzeşen ayetlere örnekler</h2>
@@ -118,11 +122,23 @@ function makeSamples() {
 function displayData() {
 	samples.innerHTML = (sort.checked? sortedText : shortText)
 }
+function closeAll() {
+	if (cButton.value == "Aç") {
+		samples.querySelectorAll('details')
+			.forEach(x => x.open = true)
+		cButton.value = "Kapat"
+	} else {
+		samples.querySelectorAll('details')
+			.forEach(x => x.open = false)
+		cButton.value = "Aç"
+	} 
+}
 window.name = parent === self? 'KK' : 'finder'
 sort.onchange = displayData
 makeSamples(); displayData()
 nsamp.textContent = ITEMS.length
 nverse.textContent = CHAPS.flat().length
+cButton.onclick = closeAll
 </script>
   </body>
 </html>
