--- a/simi/index.html
+++ b/simi/index.html
@@ -38,6 +38,7 @@
   <li><a href="../KK/korunmus.html" target=KK>Korunmuş 2022 (V4.4)</a>
   <li><a href="../ders/benzer.html">Benzerlik öbekleri 2024</a>
   <li><a href="2025.html">Kıraat farkları 2025</a>
+  <li><a href="minik.html">Minik imlâ farkları</a>
   <li><a href="tablo.html">Benzerlik YENİ (V4.9)</a>
 </ul>
 </div>
