improve ders/huruf

--- a/ders/huruf.html
+++ b/ders/huruf.html
@@ -61,12 +61,14 @@
 Mânâdan soyulmuş şu hece harflerinin zikri, muarızları hüccetsiz bırakmaya işarettir. Evet, Kur'ân-ı Mu'cizü'l-Beyan, şu mânâsız harflerin lisan-ı haliyle ilân ediyor ki:
 "Ben sizden beliğ mânâları, hükümleri, hakikatleri ifade eden yüksek hutbeleri ve nutukları istemiyorum. Yalnız şu tâdâd ettiğim harflerden bir nazîre yapınız, velev iftira ve hikâyelerden ibaret bile olursa olsun!"</blockquote>
 
-<p>Bir talebemin kıymetli gözlemi: Bu harfler, sûre ismi, i'caz unsuru, dikkat çekmek, kelime kısaltmaları gibi olası diğer anlamları dışında, "bire bir çevrilemez" olmaları bakımından, meallerin Arapça orijinallerinden kopmalarını imkansız hale getiriyor. Diğer bir deyişle, şifreli harfler başka bir dile asla çevrilemiyor.</p>
-<p>Toplam 29 sûrenin başındaki 30 ayet söz konusu. Tek harfli olan üç tanesi ilk inen ayetler arasında:<br>
-<a href=#sad>Sâd</a>, <a href=#qaf>Qâf</a>, <a href=#nun>Nûn</a>. Üçünde de çarpıcı bir kasem ve önemli bir hüküm var.</p>
-<p>Sonra iki harfliler: <a href=#taha>Tâ-Hâ</a>, <a href=#neml>Tâ-Sîn,</a> <a href=#yasin>Yâ-Sîn</a>, 7x<a href=#gafir>Hâ-Mîm</a> (10 ayet) </p>
-<p>Üç harfliler: 6x<a href=#ankebut>Elif-Lâm-Mîm,</a> 5x<a href=#yunus>Elif-Lâm-Râ</a>, 2x<a href=#şuara>Tâ-Sîn-Mîm</a>, <a href=#şura>Ayn-Sîn-Qâf</a> (14 ayet) </p>
-<p>Çok harfliler: <a href=#araf>Elif-Lâm-Mîm-Sâd</a>, <a href=#rad>Elif-Lâm-Mîm-Râ</a>, <a href=#meryem>Kâf-Hâ-Yâ-Ayn-Sâd</a> (3 ayet) </p>
+<p>Kıymetli bir talebemin önemli gözlemi: Bu harfler, sûre ismi, i'caz unsuru, dikkat çekmek, kelime kısaltmaları gibi olası diğer anlamları dışında, "bire bir çevrilemez" olmaları bakımından, meallerin Arapça orijinallerinden kopmalarını imkansız hale getiriyor. Diğer bir deyişle, şifreli harfler başka bir dile asla çevrilemiyor.</p>
+<p>Toplam 29 sûrenin başındaki 30 ayet söz konusu. (Şûrâ suresindeki beş harf, bilinmeyen bir sebeple iki ayete bölünmüş) </p>
+<p>Tek harfliler:
+<a href=#sad>Sâd</a>, <a href=#qaf>Qâf</a>, <a href=#nun>Nûn</a>. Üçünde de çarpıcı bir kasem var.</p>
+<p>İki harfliler: <a href=#taha>Tâ-Hâ</a>, <a href=#neml>Tâ-Sîn,</a> <a href=#yasin>Yâ-Sîn</a>, 6x<a href=#gafir>Hâ-Mîm</a> (9) </p>
+<p>Üç harfliler: 6x<a href=#ankebut>Elif-Lâm-Mîm,</a> 5x<a href=#yunus>Elif-Lâm-Râ</a>, 2x<a href=#şuara>Tâ-Sîn-Mîm</a> (13) </p>
+<p>Dört harfliler: <a href=#araf>Elif-Lâm-Mîm-Sâd</a>, <a href=#rad>Elif-Lâm-Mîm-Râ</a> (2) </p>
+<p>Beş harfliler: <a href=#meryem>Kâf-Hâ-Yâ-Ayn-Sâd</a>, <a href=#şura>Hâ-Mîm*Ayn-Sîn-Qâf</a> (2) </p>
 <p>Aşağıda, şifreli harflerin bulunduğu sûrelerin ilk birkaç ayetini ve M Okuyan mealini bulacaksınız. Bir kelimeye tıklayarak, aynı Arapça kökten türetilmiş bütün kelimeleri, böylece kavramlar arasındaki ilişkiyi görebilirsiniz. Bu çalışma <a href="../cuma/hamim.html">7 adet Hâ-Mîm</a> ile başlamıştı, şimdi 29 sûre tamamlandı.</p>
 
 <table id=tablo>
@@ -386,14 +388,14 @@ Biz <span data="smw">gökleri</span>, <span data="ArD">yeri</span> ve <span data
 <pre>
  2 Alm      20 Th       40 Hm
  3 Alm      26 Tsm      41 Hm
- 7 AlmS     27 Ts       42 Hm
-10 Alr      28 Tsm      42 Esq
-11 Alr      29 Alm      43 Hm
-12 Alr      30 Alm      44 Hm
-13 Almr     31 Alm      45 Hm
-14 Alr      32 Alm      46 Hm
-15 Alr      36 ys       50 q
-19 khyES    38 S        68 n
+ 7 AlmS     27 Ts       42 HmEsq
+10 Alr      28 Tsm      43 Hm
+11 Alr      29 Alm      44 Hm
+12 Alr      30 Alm      45 Hm
+13 Almr     31 Alm      46 Hm
+14 Alr      32 Alm      50 q
+15 Alr      36 ys       68 n
+19 khyES    38 S        
 </pre>
 
 <h3 id=disclaimer>Son söz</h3>
