--- a/ders/index.html
+++ b/ders/index.html
@@ -39,6 +39,7 @@
   <li><a href="yaygin.html">Sık geçen kelimeler</a>
   <li><a href="isimler.html">Özel isimler</a>
   <li><a href="huruf.html">Şifreli harfler</a>
+  <li><a href="yasin.html">Yâsîn Suresi</a>
 </ul>
 </div>
 <div class=narrow>
