--- a/ders/Allah.html
+++ b/ders/Allah.html
@@ -38,10 +38,10 @@ mâ şâ allâh	5	maA $aA^'a {ll~ahu	18:39	Allah'ın dilediği (olmuş)
 kefâ billâh	16	wakafaY%60 bi{ll~ahi	4:70	Allah yeter
 hasbiyallâh	2	HasobiYa {ll~ahu	9:129	Allah bana yeter
 hasbunallâh	2	HasobunaA {ll~ahu	3:173	Allah bize yeter
-livechillâh	2	liwajohi {ll~ahi	76:9	Allah'ın yüzü (rıza) için
+vechillâh	2	liwajohi {ll~ahi	76:9	Allah'ın yüzü (rızası)
 tebârekallâh	3	fatabaAraka {ll~ahu	40:64	Allah'ı yüceltme
 ma'âzallâh	2	maEaA*a {ll~ahi	12:23	Allah'a sığınırım
-estagfirullâh	&ndash;	wa{sotagofiruwA@ {ll~aha	2:199	Allah'tan bağışlanma
+estagfirullâh	2	wa{sotagofiruwA@ {ll~aha	2:199	Allah'tan bağışlanma
 sibgatallâh	1	Sibogapa {ll~ahi	2:138	Allah'ın boyası`
 function makeTable() {
   function line(str, i) {
