--- a/simi/index.html
+++ b/simi/index.html
@@ -24,13 +24,13 @@
 </style>
 
 <body>
-<h2>Iqra &ndash; Cuma &emsp;<button id=dersler>◀</button></h2>
+<h2>Iqra &ndash; Benzerlik &emsp;<button id=dersler>◀</button></h2>
+<br>
 <script>
   dersler.onclick = () => {location.pathname = "/Kitap/"}
 </script>
 
 <div class=narrow>
-<h3>Benzerlik</h3>
 <p>Benzeşen ayetlere örnekler</p>
 <ul>
   <li><a href="2020.html" target=KK>Benzerlik 2020 (V4.0)</a>
