--- a/cuma/index.html
+++ b/cuma/index.html
@@ -41,6 +41,7 @@
   <li><a href="hacc.html">Rahman'ın Konukları</a>
   <li><a href="kurban.html">Kurban Yakınlıktır</a>
   <li><a href="hamim.html">Hâ-Mîm Sureleri</a>
+  <li><a href="korku.html">Korku Kelimeleri</a>
 </ul>
 <p>Videolar: <a target=Kuran
 href="https://maeyler.github.io/JS/api/YouTube#PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
