--- a/cuma/index.html
+++ b/cuma/index.html
@@ -64,6 +64,7 @@ href="https://www.youtube.com/playlist?list=PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
   <li><a href="hadis.html">Kuran'da hadis (Erkan Türe)</a>
   <li><a href="bereket.html">Bereket kaynağı (Havva Demir)</a>
   <li><a href="hesapgunu.html">Hesap Günü (Burhanettin Can)</a>
+  <li><a href="surekli.html">Sürekli Yaratılış (Ali Demir)</a>
 </ul>
 </div>
 
