--- a/cuma/korku.html
+++ b/cuma/korku.html
@@ -41,7 +41,7 @@
 <p>
 Kur’an-ı Kerim’de korku tek bir psikolojik hâl olarak ele alınmaz.
 Kaynağına, yönüne ve insan üzerindeki etkisine göre
-farklı kelimelerle ifade edilir:
+farklı kelimelerle ifade edilir. Bu kavramı anlatan en az 7 kelime var:
 </p>
 <ol>
   <li><b>Havf</b>: gelecek kaygısı</li>
@@ -52,6 +52,9 @@ farklı kelimelerle ifade edilir:
   <li><b>Rehb</b>: manevi bir kaygı</li>
   <li><b>Vecel</b>: titreyiş</li>
 </ol>
+<p>Ayrıca, sık sık "Allah korkusu" diye çevrilen <b>Taqvâ</b> (sakınma) ve <b>Huşu‘</b> (boyun eğme) kelimeleri bu listeye dahil değil.</p>
+
+<iframe src="https://youtube.com/embed/vYo8A20qqZ0?si=oGGXr2tAeIJ6xBmq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <h3>1. Havf (خوف) – Gelecek Kaygısı</h3>
 <p class=meal>
@@ -131,6 +134,14 @@ doğal sonucudur ve Kur’an’da övgüyle anılır. Basit bir ürperti değil,
 <div class="ders">
 	En güzel korku, müjdeyle birlikte gelendir.
 </div>
+
+<h3>Osmanlıca'da "korku"</h3>
+<p>Arapça'daki kavram zenginliği Osmanlıca'da aynen devam etmiş. 
+Kelimelerin altı tanesi Lugatim'de var:<br>
+<a href="https://lugatim.com/s/HAVF" target="Kuran">https://lugatim.com/s/HAVF</a><br>
+Şimdi bu farklı kavramların hepsine "korku" deyip geçiyoruz.
+</p>
+<img src="/Kitap/image/korku.png" width=973>
 
 <h3>Sonuç</h3>
 <p>Kur'an bize öğretiyor ki; korku  kaçılması gereken bir duygu değildir. Allah’a yöneltilirse "Haşyet" olup insanı yüceltir; dünyaya yöneltilirse "Dehşet" olup insanı tüketir. Mümin için asıl hedef, tüm bu korkuları Allah sevgisi ve güveniyle (iman) dengelemektir.</p>
