--- a/ders/mesahif.html
+++ b/ders/mesahif.html
@@ -55,9 +55,9 @@ erken dönem mushaflar hakkında bilgi verirken, Kur'ân-ı Kerim'in korunmuşlu
 <p>Yasin <a target=iqra href="/Kuran/reader.html#v=36:35&r=Eml">36:35</a> &mdash;
   <b>'amilethu</b> ⇒ <a href="https://corpuscoranicum.org/en/verse-navigator/sura/36/verse/35/variants" target=Kuran>'amilet</a> 
   <img src="img/Yasin 35.png">
-  Kûfe'nin üç imamı "hu" ekini okumamış, ama Hafs (Kûfe'li olduğu halde) "hu" ile okumuş. Bu ayetin iki okunuşu anlam zenginliğine yol açıyor: <br>
+  Kûfe'nin üç imamı "hu" zamirini okumamış, ama Hafs (Kûfe'li olduğu halde) "hu" ile okumuş. Bu ayetin iki okunuşu anlam zenginliğine yol açıyor: <br>
   <img src="img/Yasin 35 meal.png">
-  Standart kıraate göre <b>mâ</b> olumsuzluk edatı, diğer okuyuşa göre zamir oluyor. <a href="https://kuranmeali.com/AyetKarsilastirma.php?sure=36&ayet=35" target=Kuran>Mealler</a>
+  <a href="https://kuranmeali.com/AyetKarsilastirma.php?sure=36&ayet=35" target=Kuran>Mealler</a>
 </p>
 <p>Yunus <a target=iqra href="/Kuran/reader.html#v=10:22&r=syr">10:22</a> &mdash;
   <b>yuseyyirukum</b> ⇒ <a href="https://corpuscoranicum.org/en/verse-navigator/sura/10/verse/22/variants" target=Kuran>yenşurukum</a> 
