improve esma/Selam

--- a/esma/Selam.html
+++ b/esma/Selam.html
@@ -14,8 +14,8 @@
 <h3>el-Kuddûs, es-Selâm &emsp;<button class=goBack>◀</button></h3>
 
 <p>Güzel isimlere Fatiha'dan başlamıştık. Orada bulunan "Mâlik" kelimesinden "el-Melik"e ve oradan şu sayfaya ulaştık:
-<img class="full" src="image/sayfa 547.png" alt="sayfa 547"></p>
-<p>Haşr Suresinin <a name="p=547&r={ll~ah&r=smw&r=Hsn">son üç ayetinde</a> 15 güzel isim ve 4 adet lafza-i celal bir arada... Dört âyette geçen "el-esmâul-husnâ" ifadesi de aynı yerde. (Diğerleri: 7:180, 17:110, <a name="v=20:8&r=smw&r=Hsn">20:8</a>)
+<img src="image/sayfa 547.png" alt="sayfa 547"></p>
+<p>Haşr Suresinin <a name="p=547&r={ll~ah&r=smw&r=Hsn">son üç ayetinde</a> 16 güzel isim ve 4 adet lafza-i celal bir arada... Dört âyette geçen "el-esmâul-husnâ" ifadesi de aynı yerde. (Diğerleri: 7:180, 17:110, <a name="v=20:8&r=smw&r=Hsn">20:8</a>)
 </p>
 <p>Aynı sayfada 23. ayetin üç kelimesi bir cami girişini süslüyor:
 <img src="image/Kuddûs-Selâm.jpg" alt="Kuddûs-Selâm">
