apply esma favicon
in init.js

--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
-<link rel="icon" href="/Kuran/image/icon.png">
+<link rel="icon" href="icon-esma.png">
 <title>Esmâ-i Husnâ Levhaları</title>
     
 <style>
